# artist-study-kit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  artists-backlog.csv  artists-backlog.md  pyproject.toml
data/: artists-backlog.csv
docs/: notebooklm-deep-research.md  user-guide.md
e2e/: README.md  commons_resolve.py  funnel_pipeline.py  library_collection.py
raw/: 00-artist-study-kit-seed.md  01-web-scraping-tooling-prompt.md  01.1-web-scraping-tooling.md  02-source-quality-grading-prompt.md  02.1-source-quality-grading.md  03-museum-image-apis-prompt.md  03.1-museum-image-apis.md  04-style-analysis-frameworks-prompt.md  04.1-style-analysis-frameworks.md  05-master-study-pedagogy-prompt.md  05.1-master-study-pedagogy.md  06-productive-friction-learning-prompt.md  06.1-productive-friction-learning.md  07-study-aids-scaffolding-prompt.md  07.1-study-aids-scaffolding.md  08-spaced-repetition-retention-prompt.md  08.1-spaced-repetition-retention.md  09-phase-1-research-session.md  10-wiki-synthesis-design.md  11-artist-background-research-prompt.md  11.1-artist-background-research.md  12-works-inventory-method-prompt.md  12.1-works-inventory-method.md  13-human-curation-ux-prompt.md  13.1-human-curation-ux.md  14-phase-2-wiki-session.md  15-skill-build-plans-1-2-session.md  16-image-source-hierarchy-prompt.md  16.1-image-source-hierarchy.md  17-image-discovery-hardening-session.md  18-uat-feedback.md  19-stateful-runs-custom-images-staged-analysis.md  20-dimensions-of-study-cheat-sheet.md  21.1-divergent-convergent-strategic-partner-framework.md  (+3 more)
(+101 files in other folders)
