[project]
name = "artist-study-kit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.30.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["skill"]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning:firecrawl"]
